--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Ecommerce-coderhouse</title>
+        <title>Cart page</title>
         <!-- Font Awasome -->
         <script src="https://kit.fontawesome.com/122bfc9a55.js" crossorigin="anonymous"></script>
         <!-- Bootstrap -->
@@ -13,9 +13,12 @@
         <link rel="stylesheet" href="/css/style.css" />
     </head>
     <body>
-        <%- include("../partials/welcome") %>
+        <!--todo:  No me dejo el include de welcome , ver error y traer el include -->
         <%- include("../partials/header") %>
-        <%- include("../partials/products") %>
+        <%- include("../partials/emptyCart") %>
+        <%- include("../partials/orderSummary") %>
+        
+    
         
         <script defer src="/js/scriptsEJS.js"></script>    
     </body>
